# chem-kit

./: .gitignore  README.md  conda-env.yml  mkdocs.yml  pyproject.toml  run_test.sh  setup.py
chem_kit/: __init__.py  chem_doodle.py  molecule.py  transformation.py  transformation_reductor.py
chem_kit/transformation/: __init__.py  generator.py  simplifier.py  transformation.py
docs/: CNAME  jupyter_example.ipynb
docs/API/: molecule.md
docs/API References/: molecule.md  transformation.md
tests/: test_chemdoodle.py  test_molecule.py  test_transformation.py
